docs: Update swagger documentation on update user password endpoint
