# swagger-output.json
@@ -124,45 +124,75 @@
         }
       }
     },
-    "/users/{id}": {
+    "/users/:id": {
       "patch": {
-        "description": "",
+        "description": "This endpoint updates the user password",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "id",
-            "in": "path",
+            "in": "params",
+            "description": "User id",
             "required": true,
-            "type": "string"
+            "type": "integer"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "User password",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "password": {
+                  "type": "string",
+                  "example": "batataarroz"
+                }
+              }
+            }
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
-      }
-    },
-    "/users/scopes/{id}": {
-      "patch": {
-        "description": "",
+      },
+      "delete": {
+        "description": "This endpoint is responsible for deleting users",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "id",
             "in": "path",
+            "description": "User id",
             "required": true,
-            "type": "string"
+            "type": "integer"
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "201": {
+            "description": "Created"
           }
         }
       }
     },
     "/users/scopes/remove/:id": {
       "patch": {
-        "description": "This endpoint is removes the scopes of a particular user",
+        "description": "This endpoint removes scopes of a particular user",
         "consumes": [
           "application/json"
         ],
@@ -205,31 +235,6 @@
           },
           "404": {
             "description": "Not Found"
-          }
-        }
-      }
-    },
-    "/users/:id": {
-      "delete": {
-        "description": "This endpoint is responsible for deleting users",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "User id",
-            "required": true,
-            "type": "integer"
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
           }
         }
       }
